* Make RTL test work for other versions of ImageMagick.
  Closes bug #246 (t/​357_unpaper_rtl.t test fails).
* Improve support for button-type scan options.
* + icons/gscan2pdf-papyrus.svg for use with Papyrus-like themes.
  Thanks to Chris JC Jones for donating the icon.
* + ppm & pbm extensions to open file chooser.
  Closes bug #252 (Support for pbm nd ppm bitmap formats)
* Update to Hungarian translation (thanks to csola)


1.8.0 (12.04.2017):

* + "Writing system" option in "Clean Up" (unpaper) dialogue, affecting
  the order in which the pages are imported when scans are split.
  Closes feature request #94
  (add "Deskew", "Descreen", "Split image" to "Save" dialog)
* + support for Tesseract 3.05. Thanks to Chris Mayo for the patch
  Closes bug #243 (tesseract 3.05 OCR Engine not recogized)
* + support for unpaper --no-mask-center option.
  Thanks to Peter Marschall for the patch
* + contrast + brightness tool. Thanks to Peter Marschall for the patch
  Closes bug #208 (allow luminance/contrast manipulation after scanning)
* + option to convert filename whitespace to underscores.
  Thanks to Peter Marschall for the patch
* Fix crash caused by undefined profiles in .gscan2pdf
  Closes support request #19 (Will not run past crashed session)
* Move config file to use $XDG_CONFIG_HOME or $HOME/.config directory.
  Thanks to Peter Marschall for the patch
* Various cosmetic improvements. Thanks to Peter Marschall for the patches
* Update to Italian translation (thanks to Milo Casagrande)
* Update to Slovak translation (thanks to Dušan Kazik)


1.7.3 (12.03.2017):

* Fixed bug presenting blank scan dialog if no devices found. Closes bug #241
  (Scan Document window cannot be opened if no scanner was found)
* Fixed bug updating post-save hooks if save dialog already opened.
  Closes Debian bug #756897 (Specify ways to proof-read document post-save)
* Force resolution to be integer for DjVu to prevent errors whilst saving


1.7.2 (12.02.2017):
