@@ -11,6 +11,7 @@
   Thanks to Chris JC Jones for donating the icon.
 * + ppm & pbm extensions to open file chooser.
   Closes bug #252 (Support for pbm nd ppm bitmap formats)
+* Change metadata filename codes to use strftime
 * Update to Hungarian translation (thanks to csola)
 
 
